cmake_minimum_required(VERSION 3.10)
project(DS LANGUAGES CXX VERSION 0.1)
set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_GENERATOR "Ninja")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND NOT CMAKE_SYSTEM_NAME STREQUAL "Linux")
    add_compile_options(-fexec-charset=GBK)
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(DS_DEBUG)
    add_compile_options(-DDS_Debug)
else()
    add_compile_definitions(DS_RELEASE)
    add_compile_options(-DDS_RELEASE)
endif()

add_subdirectory(chapter3)
